--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -34,7 +34,7 @@
             <td>1</td>
             <td>Lewis</td>
             <td>Developer</td>            
-            <td>Intermedio</td>            
+            <td>{{nivel}}</td>            
           </tr>
         </tbody>
         
