--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -33,7 +33,7 @@
         </thead>
 
         <tbody>
-          <tr *ngFor="let people of peoples; let i = index" >
+          <!-- <tr *ngFor="let people of peoples; let i = index" >
             <td>{{i + 1}}</td>
             <td>{{people.nombre}}</td>
             <td>{{people.profesion}}</td>
@@ -41,7 +41,7 @@
               <span *ngIf="people.nivel" class="badge bg-success">Bueno</span>
               <span *ngIf="!people.nivel" class="badge bg-danger">Malo</span>
             </td>
-          </tr>
+          </tr> -->
           
         </tbody>
         
